<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        ></LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" 
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_normal"
        android:orientation="horizontal"> 
        <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/apk" />
        <TextView android:layout_width="wrap_content" 
        android:id="@+id/appname"
        android:textColor="#000"
        android:textSize="18sp"    
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content" android:text="@string/appname"/>
     <Button
        android:id="@+id/choose_app"
        android:layout_marginLeft="12dp"
        android:textSize="17sp"
        android:textColor="#121212"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:text="@string/choosepro" /></LinearLayout>
   
 
   

   <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
               android:gravity="center_vertical" 
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_normal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1">
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" 
        android:textColor="#000000" android:text="@string/intervaltx"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText1" android:text="@string/interval" android:textColor="#000000"></EditText>
</LinearLayout>
 <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/corners_normal">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">
<TextView android:id="@+id/textView6" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:text="@string/infotype"></TextView>
<CheckBox android:text="monitor window"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/monitorwindow" android:layout_height="wrap_content" android:enabled="true" android:checked="false"></CheckBox>
</LinearLayout>
<LinearLayout android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/linearLayout2" android:orientation="horizontal">

    <CheckBox android:text="@string/pssinfo"  android:textColor="#000000" android:layout_width="wrap_content" android:visibility="gone"
        android:id="@+id/pssinfoCheckBox" android:layout_height="wrap_content" android:enabled="false" android:checked="false"></CheckBox>
     <CheckBox android:text="@string/cpuinfo"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/cpuinfoCheckBox" android:layout_height="wrap_content" android:enabled="true" android:checked="true"></CheckBox>
      <CheckBox android:text="@string/SD"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/sdcardCheckBox" android:layout_height="wrap_content" android:enabled="true"></CheckBox>
      
</LinearLayout>
<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">  
   
    <CheckBox android:text="@string/raminfo"  android:textColor="#000000" android:layout_width="wrap_content" android:visibility="gone"
        android:id="@+id/raminfoCheckBox" android:layout_height="wrap_content" android:enabled="true" android:checked="true"></CheckBox>
        <CheckBox android:text="@string/Batterylevel"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/batteryCheckBox" android:layout_height="wrap_content" android:enabled="true" android:checked="true"></CheckBox>
         
        <CheckBox android:text="@string/teminfo"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/teminfoCheckBox" android:layout_height="wrap_content" android:enabled="true" android:checked="true"></CheckBox>
</LinearLayout>
   <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">  
   
     <CheckBox android:text="@string/meminfo"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/meminfoCheckBox" android:layout_height="wrap_content" android:enabled="true"></CheckBox> 
        
</LinearLayout>
     <!--<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">  
   
    <CheckBox android:text="@string/fpsinfo"  android:textColor="#000000" android:layout_width="wrap_content" 
        android:id="@+id/fpsinfoCheckBox" android:layout_height="wrap_content" android:enabled="true"></CheckBox>
</LinearLayout>--> 
</LinearLayout>
<TextView android:text="@string/space" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4">
    <TextView android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/space"></TextView>
</LinearLayout>
</LinearLayout>
